--- a/Areas/Admin/Pages/User/_ViewImports.cshtml
+++ b/Areas/Admin/Pages/User/_ViewImports.cshtml
@@ -1,5 +1,8 @@
+@using Tich_hop_EntityFramework
+@namespace Tich_hop_EntityFramework.Pages
 @using Microsoft.AspNetCore.Identity
 @using Tich_hop_EntityFramework.Areas.Identity
 @using Tich_hop_EntityFramework.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Tich_hop_EntityFramework.models
+@using App.Admin.Role
