--- a/Areas/Identity/Pages/Account/Lockout.cshtml
+++ b/Areas/Identity/Pages/Account/Lockout.cshtml
@@ -1,10 +1,10 @@
-﻿@page
+﻿@page "/Khoataikhoan.html"
 @model LockoutModel
 @{
-    ViewData["Title"] = "Locked out";
+    ViewData["Title"] = "Tài khoản bị khóa";
 }
 
 <header>
     <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">This account has been locked out, please try again later.</p>
+    <p class="text-danger">Tài khoản bị khóa vui lòng đăng nhập lại sau.</p>
 </header>
