--- a/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/Areas/Identity/Pages/Account/Logout.cshtml
@@ -1,21 +1,23 @@
-﻿@page
+﻿@page "/logout"
 @model LogoutModel
 @{
-    ViewData["Title"] = "Log out";
+    ViewData["Title"] = "Đăng Xuất";
 }
 
 <header>
     <h1>@ViewData["Title"]</h1>
     @{
+
+        //Kiểm tra thông tin User Có đang nhập  (tác dụng giống hàm         _signInManager.IsSignedIn(User))
         if (User.Identity.IsAuthenticated)
         {
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
-                <button type="submit" class="nav-link btn btn-link text-dark">Click here to Logout</button>
+                <button type="submit" class="btn btn-danger">Bấm vào đây để đăng xuất</button>
             </form>
         }
         else
         {
-            <p>You have successfully logged out of the application.</p>
+            <p>Bạn đã đăng xuất.</p>
         }
     }
 </header>
